ready to evaluation

--- a/src/app/components/footer/menu/menu.component.css
+++ b/src/app/components/footer/menu/menu.component.css
@@ -17,5 +17,8 @@
   text-decoration: none;
   color: #bbbbbb;
   text-transform: uppercase;
-
+  transition: color .2s;
+}
+.menu-bottom span a:hover {
+  color: #ffffff;
 }
