--- a/src/app/components/promo-slider/promo-slider.component.html
+++ b/src/app/components/promo-slider/promo-slider.component.html
@@ -1,7 +1,7 @@
 <section class="title">
   <span>promotions</span>
 </section>
-<swiper class="swiper" [config]="config">
+<swiper #usefulSwiper class="swiper" [config]="config">
   <div class="swiper-wrapper">
     <div
       class="swiper-slide"
