--- a/src/app/components/registration-modal/registration-modal.component.css
+++ b/src/app/components/registration-modal/registration-modal.component.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  z-index: 200;
 }
 .modal-registration {
   position: fixed;
