--- a/src/app/components/header/menu/menu.component.html
+++ b/src/app/components/header/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav>
   <ul>
-    <li *ngFor="let item of menuItems"><a [routerLink]="item.link">{{item.title}}</a></li>
+    <li *ngFor="let item of menuItems"><a routerLinkActive="active" [routerLink]="item.link">{{item.title}}</a></li>
   </ul>
 </nav>
